# CredentialManager

./: .gitignore  Dockerfile  MANIFEST.in  README.md  SECURITY_AUDIT.md  config  config_template  credmgr.conf  credmgr.swagger_server.service  credmgr.wsgi  credmgrd.service  docker-compose.yml  docker-entrypoint.sh  env.template  generate-certificates.sh  install.sh  oidc-cilogon.md  pyproject.toml  req.cnf  requirements.txt  setup.py  test-requirements.txt
cm-app/: Dockerfile  docker-entrypoint.sh  next.config.ts  package-lock.json  package.json
cm-app/public/: index.html  manifest.json
cm-app/src/: App.js  config.json
cm-app/src/app/: globals.css  layout.tsx  page.tsx
cm-app/src/components/: Footer.jsx  Header.jsx  footer.tsx  header.tsx  providers.tsx  session-timeout-modal.tsx  spinner-full-page.tsx  spinner-with-text.tsx
cm-app/src/hooks/: use-session-timeout.ts  use-user-status.ts
cm-app/src/lib/: cm-data.ts  config.ts  external-links.ts
cm-app/src/pages/: CredentialManagerPage.jsx  Home.jsx  Homepage.jsx  LLMTokensPage.jsx  LiteLLMKeysPage.jsx
cm-app/src/services/: ceph-service.ts  cmData.json  core-api-service.ts  coreApiService.js  credential-manager-service.ts  credentialManagerService.js  externalLinks.json  http-service.ts  httpService.js  storage-service.ts
cm-app/src/styles/: App.scss
cm-app/src/utils/: checkAuthCookie.js  checkCmAppType.js  clear-local-storage.ts  clearLocalStorage.js  hasCookie.js  setCoreCookie.js  sleep.js  sleep.ts  to-locale-time.ts
credmgr/: __init__.py
credmgr/CredentialManagers/: AbstractCredentialManager.py  OAuthCredmgr.py  OAuthCredmgrSingleton.py  __init__.py
credmgr/CredentialManagers/OAuthCredmgrWebserver/: OAuthCredmgrWebserver.py  __init__.py
credmgr/swagger_server/: __init__.py  __main__.py  encoder.py
credmgr/swagger_server/controllers/: default_controller.py
credmgr/swagger_server/models/: __init__.py  base_model_.py  create_request.py  cred_mgr_response.py  cred_mgr_response_value.py  refresh_request.py  refresh_revoke_request.py
credmgr/swagger_server/swagger/: swagger.yaml
credmgr/swagger_server/test/: __init__.py  test_default_controller.py
credmgr/utils/: __init__.py  database.py  ldap.py  token.py  utils.py
docker/: config  self.signed.crt  self.signed.key
examples/config/apache/: credmgr.conf
examples/wsgi/: credmgr.wsgi
fabric/credmgr/: __init__.py  openapi.json  update_swagger_stub.sh
fabric/credmgr/credential_managers/: __init__.py  abstract_credential_manager.py  oauth_credmgr.py  oauth_credmgr_singleton.py
fabric/credmgr/swagger_server/: __init__.py  __main__.py  encoder.py
fabric/credmgr/test/: test_credmgr.py
fabric/credmgr/utils/: __init__.py  database.py  jwt_manager.py  ldap.py  log.py  project_registry.py  token.py  utils.py
fabric_cm/: __init__.py
fabric_cm/credmgr/: openapi.json  update_swagger_stub.sh
fabric_cm/credmgr/common/: exceptions.py  utils.py
fabric_cm/credmgr/config/: __init__.py  config.py
fabric_cm/credmgr/core/: __init__.py  abstract_cred_mgr.py  oauth_credmgr.py
fabric_cm/credmgr/credential_managers/: abstract_credential_manager.py  oauth_credmgr.py
fabric_cm/credmgr/external_apis/: core_api.py  ldap.py  litellm_api.py  project_registry.py
fabric_cm/credmgr/logging/: __init__.py  log.py  log_helper.py
fabric_cm/credmgr/swagger_server/: __init__.py  __main__.py  app.py  dependencies.py  encoder.py  (+2 more)
fabric_cm/db/: __init__.py  db_api.py
my-app/public/: index.html
my-app/src/: config.json  index.js
nginx/: default.conf  nginx.conf
vouch/: config_template
(+90 files in other folders)
