[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fabric-credmgr"
authors = [{name = "Komal Thareja", email = "kthare10@renci.org"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["Programming Language :: Python :: 3",
               "License :: OSI Approved :: MIT License",
               "Operating System :: OS Independent"]
description = "Fabric Credential Manager API"
dynamic = ["version"]
keywords = ["Swagger", "Fabric Credential Manager API"]

requires-python = '>=3.9'
dependencies = [
    "requests",
    "requests_oauthlib",
    "connexion",
    "swagger-ui-bundle",
    "python_dateutil",
    "setuptools",
    "ldap3",
    "prometheus_client",
    "waitress",
    "six",
    "cryptography",
    "authlib",
    "fabric_fss_utils==1.5.0"]

[project.urls]
Home = "https://fabric-testbed.net/"
Sources = "https://github.com/fabric-testbed/CredentialManager"

[tool.flit.module]
name = "fabric_cm"
