[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fabric-credmgr"
authors = [{name = "Komal Thareja", email = "kthare10@renci.org"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["Programming Language :: Python :: 3",
               "License :: OSI Approved :: MIT License",
               "Operating System :: OS Independent"]
description = "Fabric Credential Manager API"
dynamic = ["version"]
keywords = ["Swagger", "Fabric Credential Manager API"]

requires-python = '>=3.9'
dependencies = [
    "requests",
    "requests_oauthlib",
    "connexion==2.14.2",
    "swagger-ui-bundle==0.0.9",
    "python_dateutil",
    "setuptools",
    "ldap3",
    "prometheus_client",
    "waitress",
    "six",
    "cryptography",
    "authlib",
    "fabric_fss_utils==1.5.1",
    "psycopg2-binary",
    "sqlalchemy",
    ]

[project.optional-dependencies]
test = ["pytest",
        "flask_testing",
        "coverage>=4.0.3",
        "nose>=1.3.7",
        "pluggy>=0.3.1",
        "py>=1.4.31",
        "randomize>=0.13"
        ]

[project.urls]
Home = "https://fabric-testbed.net/"
Sources = "https://github.com/fabric-testbed/CredentialManager"

[tool.flit.module]
name = "fabric_cm"
