[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fabric-credmgr"
authors = [{name = "Komal Thareja", email = "kthare10@renci.org"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["Programming Language :: Python :: 3",
               "License :: OSI Approved :: MIT License",
               "Operating System :: OS Independent"]
description = "Fabric Credential Manager API"
dynamic = ["version"]
keywords = ["Swagger", "Fabric Credential Manager API"]

requires-python = '>=3.11'
dependencies = [
    "requests",
    "requests_oauthlib",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python_dateutil",
    "setuptools",
    "ldap3",
    "prometheus_client",
    "cryptography",
    "authlib",
    "fabric_fss_utils",
    "psycopg2-binary",
    "sqlalchemy",
    ]

[project.optional-dependencies]
test = ["pytest",
        "httpx",
        "coverage>=4.0.3",
        "pluggy>=0.3.1",
        "py>=1.4.31",
        "randomize>=0.13"
        ]

[project.urls]
Home = "https://fabric-testbed.net/"
Sources = "https://github.com/fabric-testbed/CredentialManager"

[tool.flit.module]
name = "fabric_cm"
